k8s/manifest/2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: otus-first-homework
  namespace: otus
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/add-base-url: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite /otusapp\/(.*?(?=\/))(.*) $2 break;
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: otus-first-homework
                port:
                  number: 8000
            pathType: Prefix
            path: /
          - backend:
              service:
                name: otus-first-homework
                port:
                  number: 8000
            pathType: Prefix
            path: /otusapp\/(.*?(?=\/))(.*)
